Fix table-wrapper overflow clipping of dropdown menus in style.css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -421,7 +421,7 @@ body {
 /* Таблицы */
 .table-wrapper {
     width: 100%;
-    overflow-x: auto;
+    overflow: visible;
 }
 
 .data-table {
